src/ui/snapshots/state/default/conflict_resolution/bug_work_item.snap
---
source: src/ui/state/default/conflict_resolution.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │⚠️  Merge Conflict Detected                                                                                         │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commit───────────────────────────────────────────────────┐┌Pull Request─────────────────────────────────────────────┐ "
" │Hash: abc123                                             ││PR #100                                                  │ "
" │Title: Fix login bug                                     ││Date: 2024-01-10T09:00:00Z                               │ "
" │                                                         ││Author: Alice Johnson                                    │ "
" │                                                         ││                                                         │ "
" │                                                         ││Title: Fix login bug                                     │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘│                                                         │ "
" ┌Conflicted Files─────────────────────────────────────────┐│                                                         │ "
" │  • src/auth/login.rs                                    ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         │└─────────────────────────────────────────────────────────┘ "
" │                                                         │┌Work Items───────────────────────────────────────────────┐ "
" │                                                         ││Bug #1001                                                │ "
" │                                                         ││● State: Closed                                          │ "
" │                                                         ││Assigned: Alice Johnson                                  │ "
" │                                                         ││                                                         │ "
" │                                                         ││Title: Login button not responding                       │ "
" │                                                         ││                                                         │ "
" │                                                         ││1. Navigate to login page                                │ "
" │                                                         ││2. Click login button                                    │ "
" │                                                         ││3. Nothing happens                                       │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Repository: /path/to/repo                                                                                           │ "
" │Please resolve conflicts in another terminal and stage the changes.                                                 │ "
" │c: Continue (after resolving) | s: Skip commit | a: Abort (cleanup) | p: Open PR | w: Open Work Item                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
