src/ui/snapshots/state/default/conflict_resolution/conflict_display.snap
---
source: src/ui/state/default/conflict_resolution.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │⚠️  Merge Conflict Detected                                                                                         │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commit───────────────────────────────────────────────────┐┌Pull Request─────────────────────────────────────────────┐ "
" │Hash: abc123                                             ││PR details not found                                     │ "
" │Title: Fix critical database migration bug               ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘│                                                         │ "
" ┌Conflicted Files─────────────────────────────────────────┐│                                                         │ "
" │  • src/database/migrations.rs                           ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         │└─────────────────────────────────────────────────────────┘ "
" │                                                         │┌Work Items───────────────────────────────────────────────┐ "
" │                                                         ││No work items linked                                     │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Repository: /path/to/repo                                                                                           │ "
" │Please resolve conflicts in another terminal and stage the changes.                                                 │ "
" │c: Continue (after resolving) | s: Skip commit | a: Abort (cleanup) | p: Open PR | w: Open Work Item                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
