src/ui/snapshots/state/default/conflict_resolution/multiple_files.snap
---
source: src/ui/state/default/conflict_resolution.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │⚠️  Merge Conflict Detected                                                                                         │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commit───────────────────────────────────────────────────┐┌Pull Request─────────────────────────────────────────────┐ "
" │Hash: abc123de                                           ││PR details not found                                     │ "
" │Title: Fix login bug                                     ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘│                                                         │ "
" ┌Conflicted Files─────────────────────────────────────────┐│                                                         │ "
" │  • src/main.rs                                          ││                                                         │ "
" │  • src/lib.rs                                           ││                                                         │ "
" │  • Cargo.toml                                           ││                                                         │ "
" │  • README.md                                            ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         │└─────────────────────────────────────────────────────────┘ "
" │                                                         │┌Work Items───────────────────────────────────────────────┐ "
" │                                                         ││No work items linked                                     │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Repository: /path/to/repo                                                                                           │ "
" │Please resolve conflicts in another terminal and stage the changes.                                                 │ "
" │c: Continue (after resolving) | s: Skip commit | a: Abort (cleanup) | p: Open PR | w: Open Work Item                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
