src/ui/snapshots/state/default/conflict_resolution/pr_description.snap
---
source: src/ui/state/default/conflict_resolution.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │⚠️  Merge Conflict Detected                                                                                         │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commit───────────────────────────────────────────────────┐┌Pull Request─────────────────────────────────────────────┐ "
" │Hash: abc123                                             ││PR #100                                                  │ "
" │Title: Fix login bug                                     ││Date: 2024-01-10T09:00:00Z                               │ "
" │                                                         ││Author: Alice Johnson                                    │ "
" │                                                         ││                                                         │ "
" │                                                         ││Title: Fix login bug                                     │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘│This PR fixes the login button not responding on the main│ "
" ┌Conflicted Files─────────────────────────────────────────┐│page.                                                    │ "
" │  • src/auth/login.rs                                    ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         │└─────────────────────────────────────────────────────────┘ "
" │                                                         │┌Work Items───────────────────────────────────────────────┐ "
" │                                                         ││No work items linked                                     │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Repository: /path/to/repo                                                                                           │ "
" │Please resolve conflicts in another terminal and stage the changes.                                                 │ "
" │c: Continue (after resolving) | s: Skip commit | a: Abort (cleanup) | p: Open PR | w: Open Work Item                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
