src/ui/snapshots/state/default/conflict_resolution/task_work_item.snap
---
source: src/ui/state/default/conflict_resolution.rs
expression: harness.backend()
---
"                                                                                                                        "
" ┌────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │⚠️  Merge Conflict Detected                                                                                         │ " Hidden by multi-width symbols: [(3, " ")]
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
" ┌Commit───────────────────────────────────────────────────┐┌Pull Request─────────────────────────────────────────────┐ "
" │Hash: def456                                             ││PR #200                                                  │ "
" │Title: Add caching layer                                 ││Date: 2024-02-15T11:00:00Z                               │ "
" │                                                         ││Author: Bob Wilson                                       │ "
" │                                                         ││                                                         │ "
" │                                                         ││Title: Add caching layer                                 │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘│Implements Redis caching for API responses               │ "
" ┌Conflicted Files─────────────────────────────────────────┐│                                                         │ "
" │  • src/cache/redis.rs                                   ││                                                         │ "
" │  • src/api/users.rs                                     ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         │└─────────────────────────────────────────────────────────┘ "
" │                                                         │┌Work Items───────────────────────────────────────────────┐ "
" │                                                         ││Task #2001                                               │ "
" │                                                         ││● State: Active                                          │ "
" │                                                         ││Assigned: Bob Wilson                                     │ "
" │                                                         ││                                                         │ "
" │                                                         ││Title: Implement caching for user endpoints              │ "
" │                                                         ││                                                         │ "
" │                                                         ││Add Redis caching with TTL of 5 minutes for user API     │ "
" │                                                         ││endpoints to reduce database load.                       │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" │                                                         ││                                                         │ "
" └─────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────┘ "
" ┌Instructions────────────────────────────────────────────────────────────────────────────────────────────────────────┐ "
" │Repository: /path/to/repo                                                                                           │ "
" │Please resolve conflicts in another terminal and stage the changes.                                                 │ "
" │c: Continue (after resolving) | s: Skip commit | a: Abort (cleanup) | p: Open PR | w: Open Work Item                │ "
" └────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘ "
"                                                                                                                        "
